# KalmanFilter

./: CMakeLists.txt  extendedKalman.cpp  extendedKalman.hpp  gps_generator.cpp  kalman.cpp  trajectory.csv  trajectory_clean.csv  trajectory_filtered.csv
include/: extendedKalman.hpp  inc.hpp  visualization.hpp
src/: extendedKalman.cpp  kalman.cpp  visualization.cpp
